# rshyper

./: .gitignore  CODEOWNERS  Cargo.toml  Gemfile  LICENSE  QUICKSTART.md  README.md  SECURITY.md  _config.yml  default.nix  flake.nix
algo/: Cargo.toml
algo/src/: astar.rs  breadth_first.rs  depth_first.rs  dijkstra.rs  error.rs  lib.rs
algo/src/astar/: priority_node.rs
algo/src/dijkstra/: queue_node.rs
algo/src/search/: astar.rs  breadth_first.rs  depth_first.rs  dijkstra.rs  mod.rs
algo/src/search/impls/: impl_astar.rs  impl_breadth_first.rs  impl_depth_first.rs  impl_dijkstra.rs
algo/src/search/traits/: search.rs
algo/src/traits/: heuristic.rs  operators.rs  path.rs  search.rs  traverse.rs
algo/src/types/: priority_node.rs
core/: Cargo.toml
core/src/: error.rs  lib.rs  weight.rs
core/src/attrs/: attributes.rs  mod.rs
core/src/cmp/: hyper_edge.rs  hyper_facet.rs  hyper_node.rs  mod.rs
core/src/cmp/hyper_edge/: impl_edge.rs
core/src/cmp/hyper_facet/: impl_hyper_facet.rs
core/src/cmp/hyper_node/: impl_hyper_node.rs
core/src/cmp/impls/: impl_hyper_edge.rs  impl_hyper_facet.rs
core/src/edge/: hyper_edge.rs  hyper_facet.rs  hyper_surface.rs  layout.rs  link.rs  mod.rs
core/src/edge/impls/: impl_edge.rs  impl_hyper_edge.rs  impl_hyper_facet.rs  impl_link.rs  impl_link_deprecated.rs  impl_link_ext.rs  impl_link_repr.rs  impl_surface.rs
core/src/edge/traits/: edge.rs  layout.rs  store.rs  surface.rs
core/src/edge/types/: aliases.rs
core/src/edge/utils/: base.rs  rand.rs
core/src/id/: index.rs  kinds.rs  mod.rs  position.rs
core/src/id/impls/: impl_ops.rs  impl_rand.rs  impl_repr.rs
core/src/idx/: error.rs  index.rs  mod.rs  position.rs  tracker.rs
core/src/idx/impls/: impl_index.rs  impl_index_ext.rs  impl_index_ops.rs  impl_index_rand.rs  impl_index_repr.rs  impl_ops.rs  impl_rand.rs  impl_repr.rs
core/src/idx/iter/: counter.rs  stepper.rs
core/src/idx/traits/: graph_index.rs  index.rs  indexed.rs  raw_index.rs
core/src/idx/types/: aliases.rs  kinds.rs
core/src/index/: error.rs  id.rs  kinds.rs  mod.rs  position.rs
core/src/index/impls/: impl_ops.rs  impl_rand.rs  impl_repr.rs
core/src/macros/: hypergraph.rs  index.rs
core/src/node/: hyper_node.rs  mod.rs
core/src/node/impls/: impl_hyper_node.rs
core/src/rel/: link.rs  mod.rs
core/src/rel/impls/: impl_link.rs  impl_link_deprecated.rs  impl_link_ext.rs
core/src/rel/traits/: layout.rs  relationship.rs
core/src/rel/types/: aliases.rs
core/src/store/: container.rs  error.rs  mod.rs
core/src/store/traits/: key_value.rs  raw_container.rs  raw_store.rs
core/src/traits/: container.rs  contains.rs  convert.rs  domain.rs  hyper_graph.rs  indexed.rs  merge.rs  nodes.rs  points.rs  step.rs  tags.rs  transform.rs  weighted.rs
core/src/types/: aliases.rs  attributes.rs  attrs.rs  graph_kind.rs  weight.rs
core/src/weight/: impl_weight.rs  impl_weight_deprecated.rs  impl_weight_ops.rs  impl_weight_repr.rs  kinds.rs  mod.rs  unweighted.rs  wrapper.rs
core/src/weight/impls/: impl_weight.rs  impl_weight_ops.rs  impl_weight_repr.rs
core/src/weight/traits/: convert.rs  weighted.rs
core/src/weight/types/: kinds.rs  unweighted.rs
core/tests/: default.rs  index.rs
docs/: index.md
hmap/: Cargo.toml
hmap/benches/: algo.rs  hyper_map.rs
hmap/src/: graph.rs  lib.rs
hmap/src/hyper_map/: mod.rs
hmap/src/impls/: impl_algo.rs  impl_deprecated.rs  impl_graph.rs  impl_hyper_graph.rs  impl_iter.rs  impl_ops.rs  impl_repr.rs  impl_serde.rs
hmap/src/iter/: edges.rs  mod.rs  nodes.rs  seq.rs  surface.rs
hmap/src/iter/edges/: directional.rs  iter.rs  parallel.rs  sequential.rs  surface.rs
hmap/src/iter/nodes/: directional.rs  iter.rs  node.rs  parallel.rs  sequential.rs
hmap/src/types/: aliases.rs
hmap/tests/: astar.rs  bft.rs  dft.rs  dijkstra.rs  hyper_map.rs
macros/: Cargo.toml
macros/src/: ast.rs  attr.rs  impls.rs  lib.rs
macros/src/ast/: edge.rs  graph.rs  node.rs  weight.rs
macros/src/impls/: graph.rs
proton/: Cargo.toml
proton/examples/: learn.rs  motion.rs  neo.rs  plant.rs  wolfram.rs
proton/src/: error.rs  lib.rs  macros.rs  plant.rs  wolfram.rs
proton/src/mem/: mod.rs  persistent.rs
proton/src/models/: learn.rs  plant.rs  vnode.rs  wolfram.rs
proton/src/nrt/: mod.rs  motion.rs  tonnetz.rs  triad.rs
proton/src/nrt/types/: class.rs  factors.rs  lpr.rs
proton/src/nrt/utils/: paths.rs
proton/src/ops/: num.rs
proton/src/topo/: memory.rs  mod.rs  motion.rs  plant.rs  tonnetz.rs  triad.rs
proton/src/topo/types/: class.rs  factors.rs  transform.rs
proton/src/traits/: symbolic.rs
proton/src/types/: music.rs  turing.rs
proton/src/utils/: modulus.rs
proton/tests/: wolfram.rs
rshyper/: Cargo.toml  lib.rs
rshyper/benches/: default.rs  hash_graph.rs  hg_edge.rs  hg_node.rs  hg_search.rs  hyper_map.rs
rshyper/examples/: basic_usage.rs  graph.rs  hash_graph.rs  hyper_map.rs  neo.rs  wolfram.rs
rshyper/src/: binary_graph.rs  error.rs  graph.rs  graphs.rs  lib.rs  macros.rs
rshyper/src/algo/: astar.rs  bft.rs  breadth_first.rs  depth_first.rs  dijkstra.rs  mod.rs  path.rs  search.rs
rshyper/src/algo/path/: dijkstra.rs
rshyper/src/algo/search/: astar.rs  breadth_first.rs  depth_first.rs  impl_astar.rs  impl_bft.rs  impl_dft.rs  mod.rs
rshyper/src/algo/traits/: heuristic.rs  operators.rs  path.rs  search.rs
rshyper/src/binary_graph/: graph.rs  mod.rs
rshyper/src/binary_graph/impls/: impl_graph.rs  impl_ops.rs  impl_repr.rs
rshyper/src/cmp/: edge.rs  node.rs
rshyper/src/graphs/: binary_graph.rs  hash_graph.rs  mod.rs
rshyper/src/hash/: mod.rs
rshyper/src/hash_graph/: attrs.rs  graph.rs  iter.rs  mod.rs
rshyper/src/hyper_map/: graph.rs  mod.rs
rshyper/src/macros/: hypergraph.rs  hypernode.rs
rshyper/src/ops/: search.rs  transform.rs
rshyper/src/traits/: edges.rs  hgraph.rs  hyper_graph.rs  indexable.rs  nodes.rs
rshyper/src/types/: index.rs  node.rs  vertex.rs  weight.rs
rshyper/tests/: astar.rs  bft.rs  default.rs  dft.rs  dijkstra.rs  graph.rs  hash_graph.rs  hyper_map.rs  macros.rs  search.rs
(+52 files in other folders)
