[workspace]
default-members = [
    "rshyper"
]
members = [
    "rshyper",
    "algo",
    "core", 
    "macros",
]
resolver = "3"

[workspace.package]
authors = [
    "FL03 <jo3mccain@icloud.com> (https://github.com/FL03)",
    "Scattered-Systems <support@scsys.io> (https://github.com/scattered-systems)"
]
categories = [
    "data-structures",
]
description = "This crate focuses on hypergraphs"
edition = "2024"
homepage = "https://github.com/FL03/rshyper/wiki"
keywords = [
    "hypergraph",
    "graph",
    "topology",
]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/rshyper.git"
rust-version = "1.85.0"
version = "0.1.3"

[workspace.dependencies]
# local
rshyper = { default-features = false, path = "rshyper", version = "0.1.3" }
rshyper-algo = { default-features = false, path = "algo", version = "0.1.3" }
rshyper-core = { default-features = false, path = "core", version = "0.1.3" }
rshyper-macros = { default-features = false, path = "macros", version = "0.1.3" }
# custom
scsys = { default-features = false, features = ["derive"], version = "0.3.0" }
# benchmarking
criterion = { version = "0.6" }
# concurrency & parallelism
crossbeam = { default-features = false, version = "0.8" }
rayon = { default-features = false, version = "1" }
rayon-core = { default-features = false, version = "1" }
# error-handling
anyhow = { default-features = false, version = "1" }
thiserror = { default-features = false, version = "2" }
# numbers
num = { default-features = false, version = "0.4" }
num-traits = { default-features = false, version = "0.2" }
ordered-float = { default-features = false, version = "5" }
# randomization
getrandom = { default-features = false, version = "0.3" }
rand = { default-features = false, version = "0.9" }
rand_distr = { default-features = false, version = "0.5" }
# data & serialization
serde = { default-features = false, features = ["derive"], version = "1" }
serde_derive = { version = "1" }
serde_json = { version = "1" }
# macros & utilities
itertools = { default-features = false, features = ["macros"], version = "0.14" }
lazy_static = { version = "1" }
paste = { version = "1" }
smart-default = { version = "0.7" }
strum = { default-features = false, features = ["derive"], version = "0.27" }
# logging
tracing = { default-features = false, features = ["attributes"], version = "0.1" }
tracing-subscriber = { default-features = false, features = ["ansi", "env-filter", "fmt"], version = "0.3" }
# wasm
wasm-bindgen = { default-features = false, version = "0.2" }

# ************* [Profiles] *************

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto  ="thin"
panic = "abort"
rpath = true
opt-level = 2
overflow-checks = true
strip = "none"

[profile.release]
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
lto = true
panic = "abort"
rpath = false
opt-level = 0
overflow-checks = false
strip = "debuginfo"
