[package]
build = "build.rs"
description = "this crate implements various algorithms for the rshyper framework"
name = "rshyper-algo"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["default"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doc = true
doctest = true
test = true

[dependencies]
rshyper-core = { features = ["hashbrown"], workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
#  data structures
hashbrown = { workspace = true }
# error handling
thiserror = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# math
num-traits = { workspace = true }
ordered-float = { optional = true, workspace = true }
# macros & utilities
strum = { features = ["derive"], workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
# WebAssembly
wasm-bindgen = { optional = true, workspace = true }

[features]
default = [
  "std",
]

full = [
  "default",
  "ordered-float",
  "serde",
  "tracing",
]

# ********* [FF] Features *********

nightly = [
  "hashbrown/nightly",
  "rshyper-core/nightly",
]

# ********* [FF] Environments *********

std = [
  "alloc",
  "hashbrown/default",
  "num-traits/std",
  "ordered-float?/std",
  "rshyper-core/std",
  "serde?/std",
  "strum/std",
  "tracing?/std",
  "thiserror/std",
]

wasi = [
  "alloc",
  "rshyper-core/wasi",
]

wasm = [
  "alloc",
  "rayon?/web_spin_lock",
  "rshyper-core/wasm",
  "wasm_bindgen",
]

# ********* [FF] Dependencies *********

alloc = [
  "hashbrown/alloc",
  "rshyper-core/alloc",
  "serde?/alloc",
]

ordered-float = ["dep:ordered-float"]

rayon = [
  "dep:rayon",
  "hashbrown/rayon",
  "rshyper-core/rayon",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "serde?/derive",
  "hashbrown/serde",
  "ordered-float?/serde",
  "rshyper-core/serde",
]

tracing = [
  "dep:tracing",
  "rshyper-core/tracing",
]

wasm_bindgen = [
  "dep:wasm-bindgen",
  "rshyper-core/wasm_bindgen",
]
