[package]
build = "build.rs"
description = "this crate implements the core functionality of rshyper, focusing on providing the essential components that compose a hypergraph"
name = "rshyper-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
crate-type = [
    "cdylib",
    "rlib"
]
bench = false
doc = true
doctest = false
test = true

[dependencies]
# custom
scsys = { workspace = true }
# concurrency & parallelism
rayon-core = { optional = true, workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
# error handling
anyhow = { optional = true, workspace = true }
thiserror = { workspace = true }
# math
num-traits = { workspace = true }
# random
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { features = ["derive"], workspace = true }
# logging
tracing = { features = ["attributes"], optional = true, workspace = true }
# wasm
wasm-bindgen = { optional = true, workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }

[features]
default = [
    "std",
]

full = [
    "default",
    "anyhow",
    "json",
    "rand",
    "serde",
    "tracing",
]

# ************* [FF:Environments] *************
nightly = []

std = [
    "alloc",
    "anyhow?/std",
    "hashbrown?/default",
    "num-traits/std",
    "rand?/std",
    "scsys/std",
    "serde?/std",
    "strum/std",
    "tracing?/std",
    "thiserror/std",
]

wasi = [
    "alloc",
    "scsys/wasi",
]

wasm = [
    "alloc",
    "rayon-core?/web_spin_lock",
    "scsys/wasm",
    "wasm-bindgen",
]
# ************* [FF:Dependencies] *************
alloc = [
    "hashbrown?/alloc",
    "scsys/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
]

anyhow = [
    "dep:anyhow",
]

hashbrown = ["dep:hashbrown"]

json = [
    "alloc",
    "serde",
    "serde_json",
    "scsys/json",
]

rand = [
    "dep:rand",
    "dep:rand_distr",
    "rng",
    "scsys/rand",
]

rayon = ["dep:rayon-core"]

rng = [
    "rand?/small_rng",
    "rand?/thread_rng",
    "scsys/rng",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "rand?/serde",
    "scsys/serde",
]

serde_json = ["dep:serde_json"]

tracing = [
    "dep:tracing",
    "scsys/tracing",
]

wasm-bindgen = ["dep:wasm-bindgen"]

# ************* [Tests] *************
[[test]]
name = "default"
required-features = []

[[test]]
name = "index"
required-features = ["std"]
