[package]
build = "build.rs"
description = "this crate implements the core functionality of rshyper, focusing on providing the essential components that compose a hypergraph"
name = "rshyper-core"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = false
crate-type = ["lib"]
doc = true
doctest = false
test = true

[[test]]
name = "index"
required-features = ["std"]

[dependencies]
# custom
contained = { workspace = true }
variants = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# data structures
hashbrown = { optional = true, workspace = true }
# error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# math
num-traits = { workspace = true }
# random
getrandom = { optional = true, workspace = true }
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { features = ["derive"], workspace = true }
# logging
tracing = { features = ["attributes"], optional = true, workspace = true }
# wasm
wasm-bindgen = { optional = true, workspace = true }

[features]
default = [
  "std",
]

full = [
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

# ************* [FF:Environments] *************
nightly = []

std = [
  "alloc",
  "anyhow/std",
  "contained/std",
  "hashbrown?/default",
  "num-traits/std",
  "rand?/std",
  "rand?/std_rng",
  "rand?/thread_rng",
  "serde?/std",
  "strum/std",
  "tracing?/std",
  "thiserror/std",
  "variants/std",
]

wasi = [
  "alloc",
]

wasm = [
  "alloc",
  "rayon?/web_spin_lock",
  "wasm_bindgen",
]

# ********* [FF] Dependencies *********

alloc = [
  "hashbrown?/alloc",
  "variants/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
]

hashbrown = ["dep:hashbrown"]

json = [
  "alloc",
  "serde",
  "serde_json",
]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "rng",
]

rayon = ["dep:rayon"]

rng = [
  "dep:getrandom",
  "rand?/small_rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "rand?/serde",
  "rand_distr?/serde",
]

serde_json = ["dep:serde_json"]

tracing = ["dep:tracing"]

wasm_bindgen = ["dep:wasm-bindgen"]
