[package]
build = "build.rs"
description = "This crate implements the hypermap implementation (a map-based hypergraph) for the rshyper framework"
name = "rshyper-hmap"

authors.workspace = true
categories.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs"]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
bench = true
crate-type = ["lib"]
doc = true
doctest = true
test = true


[[bench]]
harness = false
name = "algo"
required-features = [
  "algo",
  "rand",
  "std",
]

[[bench]]
harness = false
name = "hyper_map"
required-features = [
  "rand",
  "std",
]

[[test]]
name = "astar"
required-features = ["algo", "std"]

[[test]]
name = "bft"
required-features = ["algo", "std"]

[[test]]
name = "dft"
required-features = ["algo", "std"]

[[test]]
name = "dijkstra"
required-features = ["algo", "std"]

[[test]]
name = "hyper_map"
required-features = ["std"]

[dependencies]
rshyper-algo = { optional = true, workspace = true }
rshyper-core = { features = ["hashbrown"], workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
#  data structures
hashbrown = { workspace = true }
# error handling
thiserror = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { workspace = true }
# math
num-traits = { workspace = true }
# random
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], workspace = true }

[features]
default = [
  "algo",
  "std",
]

full = [
  "default",
  "json",
  "rand",
  "serde",
  "tracing",
]

nightly = [
  "hashbrown/nightly",
  "rshyper-algo?/nightly",
  "rshyper-core/nightly",
]

# ********* [FF] Features *********

algo = ["dep:rshyper-algo"]

# ********* [FF] Dependencies *********
# std is required, this is more symbolic then anything
std = [
  "alloc",
  "hashbrown/default",
  "num-traits/std",
  "rand?/std",
  "rand_distr?/std",
  "rshyper-algo?/std",
  "rshyper-core/std",
  "serde?/std",
  "strum/std",
  "tracing?/std",
  "thiserror/std",
]

wasi = [
  "alloc",
  "rshyper-algo?/wasi",
  "rshyper-core/wasi",
]

wasm = [
  "alloc",
  "rayon?/web_spin_lock",
  "rshyper-algo?/wasm",
  "rshyper-core/wasm",
]

# ********* [FF] Dependencies *********

alloc = [
  "hashbrown/alloc",
  "rand?/alloc",
  "rand_distr?/alloc",
  "rshyper-algo?/alloc",
  "rshyper-core/alloc",
  "serde?/alloc",
  "serde_json?/alloc",
]

json = [
  "alloc",
  "serde",
  "serde_json",
  "rshyper-core/json",
]

rand = [
  "dep:rand",
  "dep:rand_distr",
  "rng",
  "rshyper-core/rand",
]

rayon = [
  "dep:rayon",
  "hashbrown/rayon",
  "rshyper-algo?/rayon",
  "rshyper-core/rayon",
]

rng = [
  "rand?/small_rng",
  "rand?/thread_rng",
  "rshyper-core/rng",
]

serde = [
  "dep:serde",
  "dep:serde_derive",
  "hashbrown/serde",
  "rand?/serde",
  "rshyper-algo?/serde",
  "rshyper-core/serde",
]

serde_json = [
  "dep:serde_json",
  "rshyper-core/serde_json",
]

tracing = [
  "dep:tracing",
  "rshyper-algo?/tracing",
  "rshyper-core/tracing",
]

wasm_bindgen = [
  "rshyper-algo?/wasm_bindgen",
  "rshyper-core/wasm_bindgen",
]
