[package]
name = "proton"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = false
test = true

[features]
default = [ "std" ]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********
alloc = [
    "num/alloc",
    "rshyper/alloc",
    "serde?/alloc",
]

rand = [
    "dep:rand",
    "dep:rand_distr",
    "num/rand",
    "rng",
    "rshyper/rand",
]

rng = [
    "rand/small_rng",
    "rand/thread_rng",
    "rshyper/rng",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "rshyper/serde",
]

std = [
    "alloc",
    "num/std",
    "rand/std_rng",
    "rshyper/std",
    "serde?/std",
    "strum/std",
    "thiserror/std",
]

[build-dependencies]

[dependencies]
rshyper = { default-features = false, path = "../rshyper", version = "0.0.1" }

num = { default-features = false, version = "0.4" }
rand = { default-features = false, optional = true, version = "0.9" }
rand_distr = { default-features = false, optional = true, version = "0.5" }
serde = { optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
strum = { default-features = false, workspace = true }
thiserror = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustc-args = [ "--cfg", "docsrs" ]

# ********* examples *********
[[example]]
name = "neo"
required-features = [ "std" ]

[[example]]
name = "wolfram"
required-features = [ "std" ]

# ********* tests *********

[[test]]
name = "default"
required-features = [  ]

[[test]]
name = "wolfram"
required-features = [ "std" ]
