[package]
name = "proton"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = true
crate-type = [ "cdylib", "rlib" ]
doctest = false
test = true

[features]
default = [  ]

full = [
    "default",
    "rand",
    "serde",
]

# ********* [FF] Dependencies *********

rand = [
    "dep:rand",
    "dep:rand_distr",
    "num/rand",
    "rng",
    "rshyper/rand",
]

rng = [
    "rand/small_rng",
    "rand/thread_rng",
    "rshyper/rng",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "rshyper/serde",
    "serde?/derive",
]

tracing = [
    "dep:tracing",
    "rshyper/tracing",
    "tracing?/attributes",
]

[build-dependencies]

[dependencies]
rshyper = { path = "../rshyper", version = "0.0.1" }
rstm = { git = "https://github.com/FL03/rstm.git", branch = "v0.0.6", version = "0.0.6" }

itertools = { version = "0.14" }
num = { version = "0.4" }
rand = { optional = true, version = "0.9" }
rand_distr = { optional = true, version = "0.5" }
serde = { default-features = true, optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
strum = { default-features = true, workspace = true }
thiserror = { workspace = true }
tracing = { default-features = true, optional = true, workspace = true }

[dev-dependencies]
tracing-subscriber = { default-features = true, features = [ "env-filter", "fmt" ], workspace = true }

[package.metadata.docs.rs]
all-features = true
rustc-args = [ "--cfg", "docsrs" ]

# ********* examples *********
[[example]]
name = "motion"
required-features = [ "default" ]

[[example]]
name = "plant"
required-features = [ "default" ]

# ********* tests *********

[[test]]
name = "default"
required-features = [  ]

[[test]]
name = "wolfram"
required-features = [ "default" ]
