[package]
build = "build.rs"
name = "rshyper"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = false
features = ["full"]
rustc-args = ["--cfg", "docsrs" ]
version = "v{{version}}"

[package.metadata.release]
no-dev-version = true
tag-name = "{{version}}"

[lib]
crate-type = [
    "cdylib",
    "rlib",
]
bench = true
doc = true
doctest = true
test = true

[dependencies]
rshyper-core = { workspace = true }

rshyper-algo = { optional = true, workspace = true }
rshyper-macros = { optional = true, workspace = true }
# custom
scsys = { workspace = true }
# concurrency & parallelism
rayon = { optional = true, workspace = true }
# error handling
thiserror = { workspace = true }
# logging
tracing = { optional = true, workspace = true }
# macros
paste = { workspace = true }
smart-default = { workspace = true }
strum = { features = ["derive"], workspace = true }
# math
num-traits = { workspace = true }
# random
rand = { optional = true, workspace = true }
rand_distr = { optional = true, workspace = true }
# serialization
serde = { features = ["derive"], optional = true, workspace = true }
serde_derive = { optional = true, workspace = true }
serde_json = { optional = true, workspace = true }

[dev-dependencies]
criterion = { features = ["plotters"], workspace = true }
lazy_static = { workspace = true }
tracing-subscriber = { features = ["ansi", "chrono", "serde", "std"], workspace = true }

[features]
default = [
    "algo",
    "hash_graph",
    "macros",
    "std",
]

full = [
    "default",
    "anyhow",
    "json",
    "rand",
    "serde",
    "tracing",
]

# ************* [FF:Flags] *************
algo = ["dep:rshyper-algo"]

hash_graph = [
    "std"
]

macros = ["dep:rshyper-macros"]

# ************* [FF:Environments] *************
nightly = [
    "rshyper-algo/nightly",
    "rshyper-core/nightly",
    "rshyper-macros?/nightly",
]

std = [
    "alloc",
    "num-traits/std",
    "rand?/std",
    "rshyper-algo/std",
    "rshyper-core/std",
    "scsys/std",
    "serde?/std",
    "strum/std",
    "tracing?/std",
    "thiserror/std",
]

wasi = [
    "alloc",
    "rshyper-algo/wasi",
    "rshyper-core/wasi",
    "scsys/wasi",
]

wasm = [
    "alloc",
    "rayon?/web_spin_lock",
    "rshyper-algo/wasm",
    "rshyper-core/wasm",
    "scsys/wasm",
    "wasm-bindgen",
]

# ************* [FF:Dependencies] *************
alloc = [
    "rshyper-algo/alloc",
    "rshyper-core/alloc",
    "scsys/alloc",
    "serde?/alloc",
    "serde_json?/alloc",
]

anyhow = [
    "rshyper-algo?/anyhow",
    "rshyper-core/anyhow",
    "scsys/anyhow",
]

json = [
    "alloc",
    "serde",
    "serde_json",
    "rshyper-core/json",
    "scsys/json",
]

rand = [
    "dep:rand",
    "dep:rand_distr",
    "rng",
    "rshyper-core/rand",
    "scsys/rand",
]

rayon = [
    "dep:rayon",
    "rshyper-core/rayon",
]

rng = [
    "rand?/small_rng",
    "rand?/thread_rng",
    "rshyper-core/rng",
    "scsys/rng",
]

serde = [
    "dep:serde",
    "dep:serde_derive",
    "rand?/serde",
    "rshyper-core/serde",
    "scsys/serde",
]

serde_json = [
    "dep:serde_json",
    "rshyper-core/serde_json",
]

tracing = [
    "dep:tracing",
    "rshyper-algo?/tracing",
    "rshyper-core/tracing",
    "scsys/tracing",
]

wasm-bindgen = [
    "rshyper-core/wasm-bindgen",
]

# ************* [Benchmarks] *************
[[bench]]
harness = false
name = "hash_graph"
required-features = [
    "hash_graph",
    "rand",
]

# ************* [Examples] *************
[[example]]
name = "basic_usage"
required-features = [
    "hash_graph", 
    "macros",
]

[[example]]
name = "hash_graph"
required-features = [
    "hash_graph", 
    "macros", 
    "tracing",
]

# ************* [Tests] *************
[[test]]
name = "default"

[[test]]
name = "astar"
required-features = [
    "algo", 
    "hash_graph",
]

[[test]]
name = "bft"
required-features = [
    "algo", 
    "hash_graph",
]


[[test]]
name = "dft"
required-features = [
    "algo", 
    "hash_graph",
]


[[test]]
name = "dijkstra"
required-features = [
    "algo", 
    "hash_graph",
]


[[test]]
name = "hash_graph"
required-features = ["hash_graph"]

[[test]]
name = "macros"
required-features = [
    "alloc", 
    "macros",
]
